deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pythonapp
spec:
  selector:
    matchLabels:
      app: pythonapp
  replicas: 1
  template:
    metadata:
      labels:
        app: pythonapp
    spec:
      containers:
      - name: pythonapp
        image: ${REPOSITORY_TAG}
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: python-flask-docker-hello-world
spec:
  selector:
    app: pythonapp
  ports:
  - targetPort: 5000
    port: 5000
  type: ClusterIP
  #- name: 
   # port: 80
    #nodePort: 31000
  #type: LoadBalancer
