python-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: pythonwebapp.surya-aws.tk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-flask-docker-hello-world 
                port:
                  number: 5000  
              type: LoadBalancer
